--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,7 +1,7 @@
 <!-- <input placeholder="Search..." (input)="onInput($event.target.value)"> by him -->
 
 <form (submit)="onFormSubmit($event)">
-    <input placeholder="Search..." (input)="onInput($event.target)"> 
+    <input class="input" placeholder="Search..." (input)="onInput($event.target)"> 
 </form>
 
 
